# analise-noticias-ifpi-theinfo2025

./: .gitignore  README.md  analise_nlp.py  app.py  data_pipeline.py  pyproject.toml  scraping.py
data/: analise_editais.csv  noticias_ifpi.csv
