[project]
name = "analise-sentimento-ifpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "beautifulsoup4>=4.14.2",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "plotly==6.3.1",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "ruff>=0.14.1",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
]
